# CPP-Skillbox-study

./: .gitignore  README.md
Module 1/FirstTouch/: main.cpp
Module 11 Functions/m11-ht1-CaesarEncryption/: main.cpp
Module 11 Functions/m11-ht2-MailChecker/: main.cpp
Module 11 Functions/m11-ht3-IpChecker/: main.cpp
Module 11 Functions/m11-ht4-BigNumberComparison/: main.cpp
Module 11 Functions/m11-ht5-Noughts-n-Crosses/: main.cpp
Module 12 1D Array algorithms/M12-HT1-AppartmentHouse/: main.cpp
Module 12 1D Array algorithms/M12-ht3-ArraySort/: main.cpp
Module 12 1D Array algorithms/m12-ht2-DuplicatesSearch/: main.cpp
Module 13 STD_vector/Mod13-ht1-Task1/: main  main.cpp
Module 13 STD_vector/Mod13-ht1-Task2/: main  main.cpp
Module 13 STD_vector/Mod13-ht3-Task3/: main
Module 13 STD_vector/Mod13_1-t1/: main.cpp
Module 13 STD_vector/Mod13_1-t2-ReverseOrder/: main  main.cpp
Module 13 STD_vector/Mod13_2-t1-RobotsQueue/: main  main.cpp
Module 13 STD_vector/Mod13_2-t2-MedStat/: main  main.cpp
Module 13 STD_vector/Mod13_2-t3-Robots2/: main.cpp
Module 14 MD Arrays/Mod14 HT1 Dinner/: main.cpp
Module 14 MD Arrays/Mod14 HT2 CrossesAndZeroes/: main.cpp
Module 14 MD Arrays/Mod14 HT5 PopIt/: main.cpp
Module 27 OOP2/HT3 Company Simulator 2/: CMakeLists.txt  company.cpp  company.h  main.cpp  person.cpp  person.h  routines.cpp  routines.h  task.cpp  task.h
Module 27 OOP2/HT3 Company Simulator 2/inc/: company.h  person.h  routines.h  task.h
Module 27 OOP2/HT3 Company Simulator 2/src/: company.cpp  main.cpp  person.cpp  routines.cpp  task.cpp
(+224 files in other folders)
